//This is a .dbml file to visualize the database. It uses the dbdiagram.io official vscode extension for highlight, suggestion and the visualisation using the open preview icon on the line with the split editor icon

Enum User_roles{
    reader
    author
    admin
}

Table Users {
    id int [primary key, increment]
    name varchar(15) [not null]
    email varchar(20) [unique, not null]
    email_verified_at date
    password varchar(255) [not null]
    role User_roles [default: User_roles.reader]
    avatar varchar(255)
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Enum Articles_statuses{
    craft
    published
    archived
}

Table Articles {
    id int [primary key, increment]
    user_id int [ref: > Users.id, not null]
    title varchar [not null]
    content text [not null]
    status Articles_statuses [default: Articles_statuses.craft]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table Comments {
    id int [primary key, increment]
    user_id int [ref: > Users.id, not null]
    article_id int [ref: > Articles.id, not null]
    content text [not null]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table Categories{
    id int [primary key, increment]
    user_id int [ref: > Users.id, not null]
    name varchars(30) [not null]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table Article_Categorie {
    id int [primary key, increment]
    article_id int [ref: > Articles.id, not null]
    category_id int [ref: > Categories.id, not null]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table Tags {
    id int [primary key, increment]
    user_id int [ref: > Users.id, not null]
    name varchar(30) [not null]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table Article_Tag {
    id int [primary key, increment]
    article_id int [ref: > Articles.id, not null]
    tag_id int [ref: > Tags.id, not null]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}
